<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settings"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/Autographer_settings"/>
    <item
        android:id="@+id/action_select"
        android:icon="@drawable/selection"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/Autographer_select"/>
    <item
        android:id="@+id/action_done"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/Autographer_done"/>
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="90"
        android:showAsAction="always"
        android:title="@string/Autographer_clear"/>

</menu>