<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/autographer_dark_gray"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/supportEntry"
                        style="@style/SettingsEntryLayout"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:clickable="true" >

                        <TextView
                            android:id="@+id/TextView02"
                            style="@style/SettingsLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Autographer_support"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/TextView10"
                            style="@style/SettingsLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text=">"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textSize="25sp" />

                    </LinearLayout>

                    <LinearLayout
                        style="@style/SettingsEntryLayout"
                        android:layout_width="match_parent"
                        android:clickable="false"
                        android:paddingBottom="0dp"
                        android:paddingTop="0dp" >

                        <TextView
                            android:id="@+id/TextView08"
                            style="@style/SettingsLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Autographer_report_errors_and_usage"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <ToggleButton
                            android:id="@+id/toggleButton1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0"
                            android:text="ToggleButton" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="#0000"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/leftText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/Autographer_autographer_x_x_x"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/autographer_gray_bg" />

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/Autographer_copyright_2013_omg_plc"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/autographer_gray_bg" />

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/top_shadow" >
            </FrameLayout>
        </FrameLayout>
    </LinearLayout>

</FrameLayout>
